--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,11 +16,13 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - python >=3.7
     - pip
+    - setuptools >=56
     - setuptools_scm >=3.4.1
+    - toml
   run:
-    - python >=3.6
+    - python >=3.7
     - jaraco.text
     - jaraco.classes
 
